Bug 976943 - Add error handing for connect/disconnect process, f=btian, r=gyeh